se agrago lastname

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <form action="#" method="get">
         <input type="text" name="firstName" id="name">
+        <input type="text" name="lasttName" id="name">
         <input type="button" value="enviar">
     </form>
 </body>
