--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <form action="#" method="get">
         <input type="text" name="firstName" id="name">
         <input type="text" name="lasttName" id="name">
+        <input type="number" name="age" id="age">
         <input type="button" value="enviar">
     </form>
 </body>
